@@ -5,6 +5,7 @@
 	* Added a field processor service and an actual timestamp to ISO date field processor
 	* Changed the indexer to use the field processor service
 	* Changed how the frontend indexer checks whether indexing is enabled
+	* Changed interfaces tx_solr_AdditionalIndexer and tx_solr_SubstitutePageIndexer to accept documents currently being indexed
 
 2010-09-10  Markus Goldbach  <markus.goldbach@dkd.de>
 
